Add lazy load feature

--- a/src/index.scss
+++ b/src/index.scss
@@ -27,4 +27,7 @@
   li.st-tree__node--leaf > .st-tree__icon {
     visibility: hidden;
   }
+  li[aria-busy="true"] > *:not(a[href="#icon"]) {
+    opacity: .5;
+  }
 }
